// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IDPSection /> should render (IDPs pending) 1`] = `
<Card>
  <CardTitle>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardTitle>
  <CardBody>
    <Skeleton
      isDark={false}
      size="lg"
    />
  </CardBody>
  <CardFooter>
    <Skeleton
      isDark={false}
      size="md"
    />
  </CardFooter>
</Card>
`;

exports[`<IDPSection /> should render (no IDPs) 1`] = `
<Card>
  <CardBody>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Title
          className="card-title"
          headingLevel="h2"
          size="lg"
        >
          Identity providers
        </Title>
        <p>
          Configure identity providers to allow users to log into the cluster.
           
          <a
            href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more.
          </a>
        </p>
      </StackItem>
      <StackItem>
        <Tooltip
          content="You do not have permission to add an identity provider. Only cluster owners, cluster editors, and organization administrators can add identity providers."
        >
          <Dropdown
            dropdownItems={
              Array [
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/github",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      GitHub
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/google",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      Google
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/openid",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      OpenID
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/ldap",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      LDAP
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/gitlab",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      GitLab
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/htpasswd",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      HTPasswd
                    </Link>
                  }
                />,
              ]
            }
            isOpen={false}
            toggle={
              <DropdownToggle
                id="add-identity-provider"
                isDisabled="You do not have permission to add an identity provider. Only cluster owners, cluster editors, and organization administrators can add identity providers."
                onToggle={[Function]}
              >
                Add identity provider
              </DropdownToggle>
            }
          />
        </Tooltip>
      </StackItem>
      <StackItem />
    </Stack>
  </CardBody>
</Card>
`;

exports[`<IDPSection /> should render (with IDPs) 1`] = `
<Card>
  <CardBody>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Title
          className="card-title"
          headingLevel="h2"
          size="lg"
        >
          Identity providers
        </Title>
        <p>
          Configure identity providers to allow users to log into the cluster.
           
          <a
            href="https://docs.openshift.com/container-platform/latest/authentication/understanding-identity-provider.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            Learn more.
          </a>
        </p>
      </StackItem>
      <StackItem>
        <Tooltip
          content="You do not have permission to add an identity provider. Only cluster owners, cluster editors, and organization administrators can add identity providers."
        >
          <Dropdown
            dropdownItems={
              Array [
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/github",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      GitHub
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/google",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      Google
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/openid",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      OpenID
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/ldap",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      LDAP
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/gitlab",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      GitLab
                    </Link>
                  }
                />,
                <DropdownItem
                  component={
                    <Link
                      to={
                        Object {
                          "pathname": "/details/s/fake sub/add-idp/htpasswd",
                          "state": Object {
                            "allLoaded": true,
                          },
                        }
                      }
                    >
                      HTPasswd
                    </Link>
                  }
                />,
              ]
            }
            isOpen={false}
            toggle={
              <DropdownToggle
                id="add-identity-provider"
                isDisabled="You do not have permission to add an identity provider. Only cluster owners, cluster editors, and organization administrators can add identity providers."
                onToggle={[Function]}
              >
                Add identity provider
              </DropdownToggle>
            }
          />
        </Tooltip>
      </StackItem>
      <StackItem>
        <Table
          actionResolver={[Function]}
          areActionsDisabled={[Function]}
          aria-label="Identity Providers"
          borders={true}
          canSelectAll={true}
          canSortFavorites={true}
          cells={
            Array [
              Object {
                "title": "Name",
                "transforms": Array [
                  [Function],
                ],
              },
              Object {
                "title": "Type",
                "transforms": Array [
                  [Function],
                ],
              },
              Object {
                "title": "Auth callback URL",
                "transforms": Array [
                  [Function],
                ],
              },
            ]
          }
          className=""
          contentId="expanded-content"
          dropdownDirection="down"
          dropdownPosition="right"
          expandId="expandable-toggle"
          gridBreakPoint="grid-md"
          isStickyHeader={false}
          isTreeTable={false}
          ouiaSafe={true}
          role="grid"
          rowLabeledBy="simple-node"
          rows={
            Array [
              Object {
                "cells": Array [
                  "hello",
                  "GitHub",
                  Object {
                    "title": <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="https://oauth-openshift.com/oauth2callback/hello"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>,
                  },
                ],
                "idpID": "id",
                "idpName": "hello",
                "idpTypeName": "GithubIdentityProvider",
              },
              Object {
                "cells": Array [
                  "hi",
                  "Google",
                  Object {
                    "title": <ClipboardCopyLinkButton
                      className="access-control-tables-copy"
                      isDisabled={false}
                      text="https://oauth-openshift.com/oauth2callback/hi"
                    >
                      Copy URL to clipboard
                    </ClipboardCopyLinkButton>,
                  },
                ],
                "idpID": "id",
                "idpName": "hi",
                "idpTypeName": "GoogleIdentityProvider",
              },
            ]
          }
          selectVariant="checkbox"
          variant="compact"
        >
          <TableHeader />
          <Component />
        </Table>
      </StackItem>
    </Stack>
  </CardBody>
</Card>
`;
